--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <h2>Feel Free To Send Me a Message About Your Website Needs</h2>
             <p>Let me help you take your business to the next level</p>
             <div class="phone-info">
-              <h4>For any enquiry, Call Me: <span><i class="fa fa-phone"></i> <a href="#">+255 768 967 257</a></span></h4>
+              <h4>For any enquiry, Call Me: <span><i class="fa fa-phone"></i> <a href="tel:255768967257">+255 768 967 257</a></span></h4>
             </div>
           </div>
         </div>
